...
import DatePicker, { RangeOutput, SingleOutput } from 'react-native-neat-date-picker';
import * as  AppConstant from "./../../utils/AppConstant";
import CustomButtonGroup from "./../../components/CustomButtonGroup"; // Assuming you have a CustomButtonGroup component


const reminderForArray = ["Call", "Meeting", "Property Visit"];
const ampmArray = ["AM", "PM"];


// This from property list when click on meeting/clock icon

const Meeting = props => {
  const { navigation } = props;
...
            <Text style={{ marginTop: 10, marginBottom: 10, fontSize: 14 }}>
              Create a call/visiting schedule to show property to client and get
              reminder on time
            </Text>
            <Divider />
            <Text style={{ marginTop: 20, marginBottom: 15, fontSize: 14 }}>
              Reminder For ?
            </Text>

            <View style={styles.propSubSection}>

              <CustomButtonGroup
                buttons={AppConstant.REMINDER_FOR_OPTION}
...
                marginTop: 20,
                marginBottom: 20
                // marginLeft: 10,
                // marginRight: 10
              }}
            >
              <Button title="Save" onPress={() => onSubmit()} />
            </View>
          </View>
          {/* Property releted reminder list */}
          {loading ? <View
            style={{
              flex: 1,
...
      />
      <Snackbar
        visible={isVisible}
        textMessage={errorMessage}
        position={"top"}
        actionHandler={() => dismissSnackBar()}
        actionText="OK"
      />

      <Modal
        animationType="slide"
        transparent={true}
        visible={modalVisible}
...
                style={[
                  styles.inputContainerStyle,
                  { width: 80, textAlign: "center" }
                ]}
                label={"Hour*"}
                // label="Expected Rent*"
                placeholder="Hour"
                value={hour}
                // keyboardType={"numeric"}
                onChangeText={text => checkHourValidation(text)}
                onFocus={() => setIsVisible(false)}
                theme={{
                  colors: {
...
                style={[
                  styles.inputContainerStyle,
                  { width: 90, textAlign: "center" }
                ]}
                label={"Minute*"}
                // label="Expected Rent*"
                placeholder="Minute"
                value={minutes}
                // keyboardType={"numeric"}
                onChangeText={text => checkMinutesValidation(text)}
                onFocus={() => setIsVisible(false)}
                theme={{
                  colors: {
...
              <TouchableHighlight
                style={{ ...styles.applyButton }}
                onPress={() => {
                  onApply(!modalVisible);
                }}
              >
                <Text style={styles.textStyle}>Apply</Text>
              </TouchableHighlight>
            </View>
          </View>
        </View>
      </Modal>
    </View>
...
