...
const options = [
  {
    key: "Residential",
    text: "Residential"
  },
  {
    key: "Commercial",
    text: "Commercial"
  }
];

const ResidentialRentPropertyCard = props => {
  const {
...

  const navigateToDetails = (item, propertyFor) => {
    // props.setAnyItemDetails(item);
    console.log("props.setPropertyDetails(item: )", item);
    props.setPropertyDetails(item);

    if (propertyFor === "Rent") {
      navigation.navigate("PropDetailsFromListing", { item: item });
    } else if (propertyFor === "Sell") {
      navigation.navigate("PropDetailsFromListingForSell", { item: item });
    }

  };
...
            </View>
            <View style={styles.verticalLine}></View>
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {numDifferentiation(item.rent_details.expected_deposit)}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Deposit</Text>
            </View>
            <View style={styles.verticalLine}></View>
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.property_details.furnishing_status}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Furnishing</Text>
            </View>
            {/* <View style={styles.verticalLine}></View>
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>800 sqft</Text>
            <Text style={[styles.subDetailsTitle]}>Builtup</Text>
          </View> */}
          </View>
        </View>

        <Modal
          animationType="slide"
...
