...

import { resetRefresh } from './../../../reducers/dataRefreshReducer'; // Import the action creator
import { useIsFocused } from '@react-navigation/native'; //
import { useSelector, useDispatch } from 'react-redux'; // Import hooks


const lookingForArray = ["Rent", "Buy"];
const homeTypeArray = ["Apartment", "Villa", "Independent House"];
const bhkTypeArray = ["1RK", "1BHK", "2BHK", "3BHK", "4BHK", "4+BHK"];
const availabilityArray = ["Immediate", "15 Days", "30 Days", "30+ Days"];
const furnishingStatusArray = ["Full", "Semi", "Empty"];

const sortByNameArray = ["A First", "Z First"];
...
  //   setData((data) => data.filter((item) => item.customer_id !== itemToDelete.customer_id));
  //   //Fist delete for data
  // }

  const ItemView = ({ item }) => {
    // // console.log(item);
    if (item.customer_locality.property_type === "Residential") {
      if (item.customer_locality.property_for === "Rent") {
        return (
          <TouchableOpacity onPress={() => navigateToDetails(item, "Rent")}>
            <ContactResidentialRentCard navigation={navigation} item={item} deleteMe={deleteMe} closeMe={closeMe} displayCheckBox={displayCheckBox}
              disableDrawer={disableDrawer} displayCheckBoxForEmployee={displayCheckBoxForEmployee} employeeObj={employeeObj} />
          </TouchableOpacity>
...

  }, [props.residentialCustomerList])

  const FlatListFooter = () => {
    return (
      <View style={{ padding: 10, alignItems: 'center' }}>
        <Text style={{ color: '#fff' }} testID="end_of_list">End</Text>
      </View>
    );
  };

  return (
    loading ? <View
...
          </View> */}
          <TextInput
            style={styles.textInputStyle}
            onChangeText={text => searchFilterFunction(text)}
            value={search}
            underlineColorAndroid="transparent"
            placeholder="Search By Name, Address, Id, Mobile"
            placeholderTextColor="#696969"
          />
        </View>
        {data.length > 0 ? (
          <View style={styles.container}>
            <FlatList
...
                    console.log(`Button pressed: ${button.text} (Index: ${index})`);
                    setReqWithin(button.text);
                    // Query update is handled by useEffect after state change
                  }}
                />
              </View>
              <Text style={styles.marginBottom10}>Furnishing</Text>
              <View style={styles.propSubSection}>

                <CustomButtonGroup
                  buttons={furnishingStatusOptions}
                  accessibilityLabelId="furnishing_status_options"
                  isMultiSelect={true}
...
