appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Commercial"
- tapOn: "Commercial"
- assertVisible: "Search By Name, Address, Id, Mobile"

- assertVisible: ".*Sell Off In CSP1 Building 1, CSP1 Landmark 1.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: ".*Reference id: 909779.*"
- assertVisible: ".*Price.*"
- assertVisible: ".*Builtup.*"
- assertVisible: ".*Building Type.*"
- assertVisible: ".*match_909779.*"
- tapOn:
    id: "chevron_left_icon_id_909779"
- tapOn:
    id: "alarm_outline_icon_id_909779"
- assertVisible: ".*Create a call/visiting schedule to show property to client and get reminder on time.*"
- assertVisible: ".*Reminder For ?.*"
- tapOn: "reminder_type_call"
- tapOn: " Add Customer For Meeting."
- assertVisible: "Customer List"
- tapOn:
    id: "checkbox_id_319044"
- tapOn: "Go back"
- tapOn: "Date*"
- tapOn: " 28 "
- tapOn: "OK"
- tapOn: "Time*"
- tapOn: "Hour"
- inputText: "11"
- tapOn: "Minute"
- inputText: "30"
- tapOn: "AM"
- tapOn: "Apply"
- assertVisible: "11:30 AM"
# - tapOn: "Save"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"
- assertVisible: "Agent +91 9000000002 Call 11:30 AM Sat Nov 1 2025"
- tapOn: "Agent +91 9000000002 Call 11:30 AM Sat Nov 1 2025"
- assertVisible: "Meeting Details"
- assertVisible: "Vertical scroll bar, 1 page 󰅁 󰅂 75% Match Sell Off in CSP1 Building 1, CSP1 Landmark 1 Juhu Beach, Maharashtra, India Reference id: 909779 employee_909779 Shop Prop Type 3 Cr Price Mall Building Type 800 sqft Builtup"
- tapOn: "Back"