appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Residential"
- tapOn: "Residential"
- assertVisible: "Search By Name, Address, Id, Mobile"

- assertVisible: ".*Rent In RRP1 Building 1, RRP1 Landmark 1.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: ".*Reference id: 968284.*"
- scrollUntilVisible:
    element:
      id: "end_of_list"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- assertVisible: ".*Rent.*"
- assertVisible: ".*Deposit.*"
- assertVisible: ".*Furnishing.*"
- assertVisible: ".*match_968284.*"

# - tapOn: "Vertical scroll bar, 2 pages 󰅁 󰅂 match_968284 Rent In RRP1 Building 1, RRP1 Landmark 1 Juhu Beach, Maharashtra, 
# India Reference id: 968284 employee_968284 animated_968284 2BHK 30 K 
# Rent 1.5 Lac Deposit Semi Furnishing"

- tapOn:
    id: "chevron_left_icon_id_968284"
- tapOn:
    id: "alarm_outline_icon_id_968284"
- assertVisible: ".*Create a call/visiting schedule to show property to client and get reminder on time.*"
- assertVisible: ".*Reminder For ?.*"
- tapOn: "reminder_type_call"
- tapOn: " Add Customer For Meeting."
- assertVisible: "Customer List"
- tapOn:
    id: "checkbox_id_755667"
- tapOn: "Go back"
- tapOn: "Date*"
- tapOn: " 28 "
- tapOn: "OK"
- tapOn: "Time*"
- tapOn: "Hour"
- inputText: "11"
- tapOn: "Minute"
- inputText: "30"
- tapOn: "AM"
- tapOn: "Apply"
- assertVisible: "11:30 AM"
- tapOn: "Save"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"
- assertVisible: "Agent +91 9000000002 Call 11:30 AM Sun Sep 28 2025"
- tapOn: "Agent +91 9000000002 Call 11:30 AM Sun Sep 28 2025"
- assertVisible: "Meeting Details"
- assertVisible: "Vertical scroll bar, 1 page 󰅁 󰅂 84% Match Rent In RRP1 Building 1, RRP1 Landmark 1 Juhu Beach, Maharashtra, India Reference id: 968284 employee_968284 2BHK 30 K Rent 1.5 Lac Deposit Semi Furnishing"
- tapOn: "Go back"